--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "أرسل رسالة ('exit' للخروج)",
   "Please enter a prompt.": "الرجاء إدخال تعليمات.",
   "THINKING...": "فكر...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "يرجى تعيين مفتاح OpenAI API الخاص بك عبر `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "يرجى تعيين مفتاح Mistral API الخاص بك عبر `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "تعيين التكوين",
-  "Enter your OpenAI API key": "أدخل مفتاح OpenAI API الخاص بك",
+  "Enter your Mistral API key": "أدخل مفتاح Mistral API الخاص بك",
   "(not set)": "(غير مضبوط)",
-  "OpenAI Key": "مفتاح OpenAI",
+  "Mistral Key": "مفتاح Mistral",
   "Please enter a key": "الرجاء إدخال مفتاح",
-  "OpenAI API Endpoint": "نقطة نهاية OpenAI API",
-  "Enter your OpenAI API Endpoint": "أدخل نقطة نهاية OpenAI API الخاصة بك",
+  "Mistral API Endpoint": "نقطة نهاية Mistral API",
+  "Enter your Mistral API Endpoint": "أدخل نقطة نهاية Mistral API الخاصة بك",
   "Silent Mode": "وضع صامت",
   "Enable silent mode?": "تمكين الوضع الصامت؟",
   "Model": "نموذج",
