--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "Nachricht senden ('exit' zum Beenden)",
   "Please enter a prompt.": "Bitte geben Sie eine Aufforderung ein.",
   "THINKING...": "DENKEN...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Bitte setzen Sie Ihren OpenAI-API-Schlüssel über `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Bitte setzen Sie Ihren Mistral-API-Schlüssel über `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Konfiguration setzen",
-  "Enter your OpenAI API key": "Geben Sie Ihren OpenAI-API-Schlüssel ein",
+  "Enter your Mistral API key": "Geben Sie Ihren Mistral-API-Schlüssel ein",
   "(not set)": "(nicht gesetzt)",
-  "OpenAI Key": "OpenAI-Schlüssel",
+  "Mistral Key": "Mistral-Schlüssel",
   "Please enter a key": "Bitte geben Sie einen Schlüssel ein",
-  "OpenAI API Endpoint": "OpenAI-API-Endpunkt",
-  "Enter your OpenAI API Endpoint": "Geben Sie Ihren OpenAI-API-Endpunkt ein",
+  "Mistral API Endpoint": "Mistral-API-Endpunkt",
+  "Enter your Mistral API Endpoint": "Geben Sie Ihren Mistral-API-Endpunkt ein",
   "Silent Mode": "Leiser Modus",
   "Enable silent mode?": "Leisen Modus aktivieren?",
   "Model": "Modell",
