--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "enviar uma mensagem ('exit' para sair)",
   "Please enter a prompt.": "Por favor, insira um prompt.",
   "THINKING...": "PENSANDO...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Por favor, defina sua chave de API OpenAI via `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Por favor, defina sua chave de API Mistral via `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Definir configuração",
-  "Enter your OpenAI API key": "Insira sua chave de API OpenAI",
+  "Enter your Mistral API key": "Insira sua chave de API Mistral",
   "(not set)": "(não definido)",
-  "OpenAI Key": "Chave OpenAI",
+  "Mistral Key": "Chave Mistral",
   "Please enter a key": "Por favor, insira uma chave",
-  "OpenAI API Endpoint": "Endpoint da API OpenAI",
-  "Enter your OpenAI API Endpoint": "Insira seu Endpoint da API OpenAI",
+  "Mistral API Endpoint": "Endpoint da API Mistral",
+  "Enter your Mistral API Endpoint": "Insira seu Endpoint da API Mistral",
   "Silent Mode": "Modo silencioso",
   "Enable silent mode?": "Ativar modo silencioso?",
   "Model": "Modelo",
