--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "bir mesaj gönder (çıkmak için 'exit' yaz)",
   "Please enter a prompt.": "Lütfen bir bilgi istemi girin.",
   "THINKING...": "DÜŞÜNÜYOR...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Lütfen OpenAI anahtarınızı bunla ayarlayın `ai config set OPENAI_KEY=<sizin anahtarınız>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Lütfen Mistral anahtarınızı bunla ayarlayın `ai config set MISTRAL_KEY=<sizin anahtarınız>`",
   "Set config": "Yapılandırmayı ayarla",
-  "Enter your OpenAI API key": "OpenAI API anahtarınızı girin",
+  "Enter your Mistral API key": "Mistral API anahtarınızı girin",
   "(not set)": "(ayarlanmadı)",
-  "OpenAI Key": "OpenAI Anahtarınız",
+  "Mistral Key": "Mistral Anahtarınız",
   "Please enter a key": "Lütfen bir anahtar girin",
-  "OpenAI API Endpoint": "OpenAI API Uçnoktası",
-  "Enter your OpenAI API Endpoint": "OpenAI API Uçnoktanızı girin",
+  "Mistral API Endpoint": "Mistral API Uçnoktası",
+  "Enter your Mistral API Endpoint": "Mistral API Uçnoktanızı girin",
   "Silent Mode": "Sessiz Mod",
   "Enable silent mode?": "Sessiz mod etkinleştirilsin mi?",
   "Model": "Model",
