--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "надіслати повідомлення ('вихід', щоб вийти)",
   "Please enter a prompt.": "Будь ласка, введіть запитання.",
   "THINKING...": "ДУМАЮ...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Будь ласка, встановіть свій ключ OpenAI API через `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Будь ласка, встановіть свій ключ Mistral API через `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Встановити конфігурацію",
-  "Enter your OpenAI API key": "Введіть свій ключ OpenAI API",
+  "Enter your Mistral API key": "Введіть свій ключ Mistral API",
   "(not set)": "(не встановлено)",
-  "OpenAI Key": "Ключ OpenAI",
+  "Mistral Key": "Ключ Mistral",
   "Please enter a key": "Будь ласка, введіть ключ",
-  "OpenAI API Endpoint": "Кінцева точка OpenAI API",
-  "Enter your OpenAI API Endpoint": "Введіть кінцеву точку OpenAI API",
+  "Mistral API Endpoint": "Кінцева точка Mistral API",
+  "Enter your Mistral API Endpoint": "Введіть кінцеву точку Mistral API",
   "Silent Mode": "Тихий режим",
   "Enable silent mode?": "Увімкнути тихий режим?",
   "Model": "Модель",
