--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "send a message ('exit' to quit)",
   "Please enter a prompt.": "Please enter a prompt.",
   "THINKING...": "THINKING...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Set config",
-  "Enter your OpenAI API key": "Enter your OpenAI API key",
+  "Enter your Mistral API key": "Enter your Mistral API key",
   "(not set)": "(not set)",
-  "OpenAI Key": "OpenAI Key",
+  "Mistral Key": "Mistral Key",
   "Please enter a key": "Please enter a key",
-  "OpenAI API Endpoint": "OpenAI API Endpoint",
-  "Enter your OpenAI API Endpoint": "Enter your OpenAI API Endpoint",
+  "Mistral API Endpoint": "Mistral API Endpoint",
+  "Enter your Mistral API Endpoint": "Enter your Mistral API Endpoint",
   "Silent Mode": "Silent Mode",
   "Enable silent mode?": "Enable silent mode?",
   "Model": "Model",
