--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "enviar un mensaje ('exit' para salir)",
   "Please enter a prompt.": "Por favor ingrese un indicio.",
   "THINKING...": "PENSANDO...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Por favor configure su clave de API de OpenAI a través de `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Por favor configure su clave de API de Mistral a través de `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Configuración",
-  "Enter your OpenAI API key": "Ingrese su clave de API de OpenAI",
+  "Enter your Mistral API key": "Ingrese su clave de API de Mistral",
   "(not set)": "(no establecido)",
-  "OpenAI Key": "Clave de OpenAI",
+  "Mistral Key": "Clave de Mistral",
   "Please enter a key": "Por favor ingrese una clave",
-  "OpenAI API Endpoint": "Punto final de la API de OpenAI",
-  "Enter your OpenAI API Endpoint": "Ingrese su punto final de API de OpenAI",
+  "Mistral API Endpoint": "Punto final de la API de Mistral",
+  "Enter your Mistral API Endpoint": "Ingrese su punto final de API de Mistral",
   "Silent Mode": "Modo silencioso",
   "Enable silent mode?": "¿Habilitar el modo silencioso?",
   "Model": "Modelo",
