--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "envoyer un message ('exit' pour quitter)",
   "Please enter a prompt.": "Veuillez entrer une invite.",
   "THINKING...": "EN RÉFLEXION...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Veuillez définir votre clé API OpenAI via `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Veuillez définir votre clé API Mistral via `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Configurer",
-  "Enter your OpenAI API key": "Entrez votre clé API OpenAI",
+  "Enter your Mistral API key": "Entrez votre clé API Mistral",
   "(not set)": "(non défini)",
-  "OpenAI Key": "Clé OpenAI",
+  "Mistral Key": "Clé Mistral",
   "Please enter a key": "Veuillez entrer une clé",
-  "OpenAI API Endpoint": "Point de terminaison de l'API OpenAI",
-  "Enter your OpenAI API Endpoint": "Entrez votre point de terminaison d'API OpenAI",
+  "Mistral API Endpoint": "Point de terminaison de l'API Mistral",
+  "Enter your Mistral API Endpoint": "Entrez votre point de terminaison d'API Mistral",
   "Silent Mode": "Mode silencieux",
   "Enable silent mode?": "Activer le mode silencieux?",
   "Model": "Modèle",
