--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "kirim pesan ('exit' untuk keluar)",
   "Please enter a prompt.": "Silakan masukkan permintaan.",
   "THINKING...": "BERPIKIR...",
-  "Please set your OpenAI API key via ai config set OPENAI_KEY=<your token>": "Harap atur kunci API OpenAI Anda melalui ai config set OPENAI_KEY=<token Anda>",
+  "Please set your Mistral API key via ai config set MISTRAL_KEY=<your token>": "Harap atur kunci API Mistral Anda melalui ai config set MISTRAL_KEY=<token Anda>",
   "Set config": "Atur konfigurasi",
-  "Enter your OpenAI API key": "Masukkan kunci API OpenAI Anda",
+  "Enter your Mistral API key": "Masukkan kunci API Mistral Anda",
   "(not set)": "(belum diatur)",
-  "OpenAI Key": "Kunci OpenAI",
+  "Mistral Key": "Kunci Mistral",
   "Please enter a key": "Silakan masukkan kunci",
-  "OpenAI API Endpoint": "Titik Akhir API OpenAI",
-  "Enter your OpenAI API Endpoint": "Masukkan Titik Akhir API OpenAI Anda",
+  "Mistral API Endpoint": "Titik Akhir API Mistral",
+  "Enter your Mistral API Endpoint": "Masukkan Titik Akhir API Mistral Anda",
   "Silent Mode": "Mode Senyap",
   "Enable silent mode?": "Aktifkan mode senyap?",
   "Model": "Model",
