--- a/src/locales/jp.json
+++ b/src/locales/jp.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "メッセージを送信する（終了するには 'exit'）",
   "Please enter a prompt.": "プロンプトを入力してください。",
   "THINKING...": "考え中...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "OpenAI APIキーを `ai config set OPENAI_KEY=<your token>` で設定してください",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Mistral APIキーを `ai config set MISTRAL_KEY=<your token>` で設定してください",
   "Set config": "設定",
-  "Enter your OpenAI API key": "OpenAI APIキーを入力してください",
+  "Enter your Mistral API key": "Mistral APIキーを入力してください",
   "(not set)": "(未設定)",
-  "OpenAI Key": "OpenAIキー",
+  "Mistral Key": "Mistralキー",
   "Please enter a key": "キーを入力してください",
-  "OpenAI API Endpoint": "OpenAI APIエンドポイント",
-  "Enter your OpenAI API Endpoint": "OpenAI APIエンドポイントを入力してください",
+  "Mistral API Endpoint": "Mistral APIエンドポイント",
+  "Enter your Mistral API Endpoint": "Mistral APIエンドポイントを入力してください",
   "Silent Mode": "サイレントモード",
   "Enable silent mode?": "サイレントモードを有効にしますか？",
   "Model": "モデル",
