--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "메시지 보내기 ('exit' 입력 시 종료)",
   "Please enter a prompt.": "프롬프트를 입력하세요.",
   "THINKING...": "생각 중...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "OpenAI API 키를 `ai config set OPENAI_KEY=<your token>`으로 설정하세요.",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Mistral API 키를 `ai config set MISTRAL_KEY=<your token>`으로 설정하세요.",
   "Set config": "설정",
-  "Enter your OpenAI API key": "OpenAI API 키를 입력하세요.",
+  "Enter your Mistral API key": "Mistral API 키를 입력하세요.",
   "(not set)": "(설정되지 않음)",
-  "OpenAI Key": "OpenAI 키",
+  "Mistral Key": "Mistral 키",
   "Please enter a key": "키를 입력하세요.",
-  "OpenAI API Endpoint": "OpenAI API 엔드포인트",
-  "Enter your OpenAI API Endpoint": "OpenAI API 엔드포인트를 입력하세요.",
+  "Mistral API Endpoint": "Mistral API 엔드포인트",
+  "Enter your Mistral API Endpoint": "Mistral API 엔드포인트를 입력하세요.",
   "Silent Mode": "조용한 모드",
   "Enable silent mode?": "조용한 모드를 활성화하시겠습니까?",
   "Model": "모델",
