--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "отправить сообщение ('выход' для выхода)",
   "Please enter a prompt.": "Пожалуйста, введите запрос.",
   "THINKING...": "ДУМАЮ...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Пожалуйста, установите свой ключ OpenAI API через `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Пожалуйста, установите свой ключ Mistral API через `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Установить конфигурацию",
-  "Enter your OpenAI API key": "Введите ваш ключ OpenAI API",
+  "Enter your Mistral API key": "Введите ваш ключ Mistral API",
   "(not set)": "(не установлено)",
-  "OpenAI Key": "Ключ OpenAI",
+  "Mistral Key": "Ключ Mistral",
   "Please enter a key": "Пожалуйста, введите ключ",
-  "OpenAI API Endpoint": "Конечная точка OpenAI API",
-  "Enter your OpenAI API Endpoint": "Введите конечную точку OpenAI API OpenAI",
+  "Mistral API Endpoint": "Конечная точка Mistral API",
+  "Enter your Mistral API Endpoint": "Введите конечную точку Mistral API Mistral",
   "Silent Mode": "Тихий режим",
   "Enable silent mode?": "Включить тихий режим?",
   "Model": "Модель",
