--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "gửi tin nhắn ('exit' để thoát)",
   "Please enter a prompt.": "Vui lòng nhập một lời nhắn.",
   "THINKING...": "ĐANG SUY NGHĨ...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "Vui lòng thiết lập khóa API OpenAI của bạn thông qua `ai config set OPENAI_KEY=<your token>`",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "Vui lòng thiết lập khóa API Mistral của bạn thông qua `ai config set MISTRAL_KEY=<your token>`",
   "Set config": "Cài đặt cấu hình",
-  "Enter your OpenAI API key": "Nhập khóa API OpenAI của bạn",
+  "Enter your Mistral API key": "Nhập khóa API Mistral của bạn",
   "(not set)": "(không được đặt)",
-  "OpenAI Key": "Khóa OpenAI",
+  "Mistral Key": "Khóa Mistral",
   "Please enter a key": "Vui lòng nhập một khóa",
-  "OpenAI API Endpoint": "Điểm cuối API OpenAI",
-  "Enter your OpenAI API Endpoint": "Nhập Điểm cuối API OpenAI của bạn",
+  "Mistral API Endpoint": "Điểm cuối API Mistral",
+  "Enter your Mistral API Endpoint": "Nhập Điểm cuối API Mistral của bạn",
   "Silent Mode": "Chế độ im lặng",
   "Enable silent mode?": "Bật chế độ im lặng?",
   "Model": "Mô hình",
