--- a/src/locales/zh-Hans.json
+++ b/src/locales/zh-Hans.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "发送消息（'exit' 退出）",
   "Please enter a prompt.": "请输入提示语",
   "THINKING...": "思考中...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "请通过 `ai config set OPENAI_KEY=<your token>` 设置您的 OpenAI API 密钥",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "请通过 `ai config set MISTRAL_KEY=<your token>` 设置您的 Mistral API 密钥",
   "Set config": "设置配置",
-  "Enter your OpenAI API key": "输入您的 OpenAI API 密钥",
+  "Enter your Mistral API key": "输入您的 Mistral API 密钥",
   "(not set)": "(未设置)",
-  "OpenAI Key": "OpenAI 密钥",
+  "Mistral Key": "Mistral 密钥",
   "Please enter a key": "请输入密钥",
-  "OpenAI API Endpoint": "OpenAI API 端点",
-  "Enter your OpenAI API Endpoint": "输入您的 OpenAI API 端点",
+  "Mistral API Endpoint": "Mistral API 端点",
+  "Enter your Mistral API Endpoint": "输入您的 Mistral API 端点",
   "Silent Mode": "静默模式",
   "Enable silent mode?": "启用静默模式？",
   "Model": "模型",
