--- a/src/locales/zh-Hant.json
+++ b/src/locales/zh-Hant.json
@@ -4,14 +4,14 @@
   "send a message ('exit' to quit)": "發送消息（'exit' 退出）",
   "Please enter a prompt.": "請輸入提示語",
   "THINKING...": "思考中...",
-  "Please set your OpenAI API key via `ai config set OPENAI_KEY=<your token>`": "請通過 `ai config set OPENAI_KEY=<your token>` 設置您的 OpenAI API 密鑰",
+  "Please set your Mistral API key via `ai config set MISTRAL_KEY=<your token>`": "請通過 `ai config set MISTRAL_KEY=<your token>` 設置您的 Mistral API 密鑰",
   "Set config": "設置配置",
-  "Enter your OpenAI API key": "輸入您的 OpenAI API 密鑰",
+  "Enter your Mistral API key": "輸入您的 Mistral API 密鑰",
   "(not set)": "（未設置）",
-  "OpenAI Key": "OpenAI 密鑰",
+  "Mistral Key": "Mistral 密鑰",
   "Please enter a key": "請輸入密鑰",
-  "OpenAI API Endpoint": "OpenAI API 端點",
-  "Enter your OpenAI API Endpoint": "輸入您的 OpenAI API 端點",
+  "Mistral API Endpoint": "Mistral API 端點",
+  "Enter your Mistral API Endpoint": "輸入您的 Mistral API 端點",
   "Silent Mode": "靜默模式",
   "Enable silent mode?": "啟用靜默模式？",
   "Model": "模型",
